Bug 11010 - One way trusts are broken on a DC.
Summary: One way trusts are broken on a DC.
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: AD: LDB/DSDB/SAMDB (show other bugs)
Version: 4.2.0rc2
Hardware: All All
: P5 normal (vote)
Target Milestone: 4.3
Assignee: Andrew Bartlett
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-12-16 09:08 UTC by Stefan Metzmacher
Modified: 2017-02-22 19:30 UTC (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Stefan Metzmacher 2014-12-16 09:08:28 UTC
The new logic in get_trust_credentials() in winbindd_cm.c is wrong for one way
outgoing trusts.
Comment 1 Stefan Metzmacher 2014-12-18 07:58:33 UTC
This code is not backported to v4-2-test, I'll retest this with v4-2-test,
but this is no blocker for 4.2.0rc3...
Comment 2 Stefan Metzmacher 2017-02-22 19:30:20 UTC
I guess it's fixed with 064d40f4d30d711797b76082afbb936dcfd9c659.